--- a/Other/Others.csproj
+++ b/Other/Others.csproj
@@ -36,6 +36,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Idv.Chetana.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\LiveSite\Bin\Idv.Chetana.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Idv.Chetana.DAL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\LiveSite\Bin\Idv.Chetana.DAL.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -54,16 +62,6 @@
     <Compile Include="CustCategory.cs" />
     <Compile Include="OtherClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Idv.Chetana.Common\Idv.Chetana.Common.csproj">
-      <Project>{F327AAA8-E78F-4E0A-9E13-CE42BC0E8D2C}</Project>
-      <Name>Idv.Chetana.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Idv.Chetana.DAL\Idv.Chetana.DAL.csproj">
-      <Project>{88989526-AC49-43DA-981F-2FDE41651B73}</Project>
-      <Name>Idv.Chetana.DAL</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
