--- a/LiveSite/Web.config
+++ b/LiveSite/Web.config
@@ -32,7 +32,8 @@
     <add key="accessok" value="true"/>
     <add key="receiptBookIncrement" value="14"/>
     <!--<add key="chStationaryUrl" value="http://192.168.0.1/chstat/_auth.aspx" />-->
-    <add key="chStationaryUrl" value="http://crm.chetanapublications.com:8080/_auth.aspx"/>
+    <!--<add key="chStationaryUrl" value="http://crm.chetanapublications.com:8080/_auth.aspx"/>-->
+    <add key="chStationaryUrl" value="http://localhost:20441/LiveSite/_auth.aspx"/>
     <add key="FromMail" value="idivergencethane@gmail.com"/>
     <add key="ToMail" value="sainath@idivergence.in"/>
     <add key="SMTP" value="smtp.gmail.com"/>
@@ -77,7 +78,8 @@
     <!--SMS Related Details END-->
   </appSettings>
   <connectionStrings>
-    <add connectionString="server=ADMINRG-QN9NKCK\SQLEXPRESS;database=Chetana_Erp02; uid=sa;pwd=sa@123" name="idvConString"/>
+    <!--<add connectionString="server=ADMINRG-QN9NKCK\SQLEXPRESS;database=Chetana_Erp02; uid=sa;pwd=sa@123" name="idvConString"/>-->
+  <add connectionString="server=MASAGATECH\SQLEXPRESS;database=Chetana_New; Integrated Security=true" name="idvConString"/>
   </connectionStrings>
   <system.web>
     <httpRuntime maxRequestLength="1048576"/>
@@ -99,11 +101,6 @@
         <add assembly="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
-        
-        
-        
-        
-        
       </assemblies>
       <buildProviders>
         <add extension=".rpt" type="CrystalDecisions.Web.Compilation.RptBuildProvider, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
